--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-REACT_APP_CHAIN_ID=0x5
-REACT_APP_CHAIN_ID_NUMBER=5
-REACT_APP_INFURA_ID=77be13dcb523408ebfecc768818e1b11
+REACT_APP_CONTRACT_ID = coinsender.testnet
+REACT_APP_ENVIRONTMENT = testnet
 
 
