--- a/package.json
+++ b/package.json
@@ -14,28 +14,23 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@walletconnect/web3-provider": "^1.8.0",
-    "assert": "^2.0.0",
+    "big-integer": "^1.6.51",
+    "buffer": "^6.0.3",
     "compose-function": "^3.0.3",
-    "ethers": "^5.7.0",
     "framer-motion": "^7.2.1",
-    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
-    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
-    "url": "^0.11.0",
-    "util": "^0.12.4",
-    "web-vitals": "^2.1.4",
-    "web3modal": "^1.9.9"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -58,16 +53,6 @@
     ]
   },
   "devDependencies": {
-    "assert": "^2.0.0",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
-    "https-browserify": "^1.0.0",
-    "os-browserify": "^0.3.0",
-    "process": "^0.11.10",
-    "react-app-rewired": "^2.2.1",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.0",
     "@types/compose-function": "^0.0.30"
   }
 }
