--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "buffer": "^6.0.3",
     "compose-function": "^3.0.3",
     "framer-motion": "^7.2.1",
+    "near-api-js": "^0.45.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
