--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_CONTRACT_ID = coinsender.near
-REACT_APP_ENVIRONTMENT = mainnet
+REACT_APP_CONTRACT_ID = coinsender.testnet
+REACT_APP_ENVIRONTMENT = testnet
 
